--- a/.github/workflows/example_build_docker.yml
+++ b/.github/workflows/example_build_docker.yml
@@ -38,8 +38,8 @@ jobs:
 
     - name: Build, tag, and push Docker image
       env:
-        ECR_URI: "815328112642.dkr.ecr.us-east-1.amazonaws.com/web-app"
-        IMAGE_TAG: latest,${{ github.sha }}
+        ECR_URI: "815328112642.dkr.ecr.us-east-1.amazonaws.com/web-app" # Change to your ECR URI
+        IMAGE_TAG: latest
       run: |
         docker build -t $ECR_URI:$IMAGE_TAG .
         docker push $ECR_URI:$IMAGE_TAG
